force-app/main/default/objects/Scorecard_Questions__c/Scorecard_Questions__c.object-meta.xml
<CustomObject>
    <label>Scorecard Question</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>