force-app/main/default/objects/Scorecard_Questions__c/fields/Adder_Value__c.field-meta.xml
<CustomField>
    <fullName>Adder_Value__c</fullName>
    <label>Adder Value</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>