force-app/main/default/objects/Scorecard_Questions__c/fields/Criteria_Definition__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Definition__c</fullName>
    <label>Criteria Definition</label>
    <type>TextArea</type>
</CustomField>