force-app/main/default/objects/Scorecard_Questions__c/fields/Order_number__c.field-meta.xml
<CustomField>
    <fullName>Order_number__c</fullName>
    <label>Order number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>