force-app/main/default/objects/Scorecard_Questions__c/fields/Point_Value__c.field-meta.xml
<CustomField>
    <fullName>Point_Value__c</fullName>
    <label>Point Value</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>