force-app/main/default/objects/Scorecard_Questions__c/fields/Question_Available_For__c.field-meta.xml
<CustomField>
    <fullName>Question_Available_For__c</fullName>
    <label>Question Available For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C&amp;I</fullName>
            </value>
            <value>
                <fullName>Biogas</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Energy Infrastructure</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>