force-app/main/default/objects/Scorecard_Questions__c/fields/Required_For_Account_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Required_For_Account_Qualification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required For Account Qualification</label>
    <type>Checkbox</type>
</CustomField>