force-app/main/default/objects/Scorecard_Questions__c/fields/Required_For_Stage_Progression__c.field-meta.xml
<CustomField>
    <fullName>Required_For_Stage_Progression__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required For Stage Progression</label>
    <type>Checkbox</type>
</CustomField>