force-app/main/default/objects/Scorecard_Questions__c/fields/Restricted_Opportunity_Stages__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Opportunity_Stages__c</fullName>
    <label>Restricted Opportunity Stages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preliminary Meeting</fullName>
            </value>
            <value>
                <fullName>Proposal/RFP Generation</fullName>
            </value>
            <value>
                <fullName>Term Sheet</fullName>
            </value>
            <value>
                <fullName>Negotiating Contract</fullName>
            </value>
            <value>
                <fullName>Final Site Development</fullName>
            </value>
            <value>
                <fullName>Initial Assessment</fullName>
            </value>
            <value>
                <fullName>Indicative Proposal</fullName>
            </value>
            <value>
                <fullName>Firm Proposal</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>