force-app/main/default/objects/Scorecard_Questions__c/fields/Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Scorecard__c</fullName>
    <label>Scorecard</label>
    <referenceTo>Scorecard__c</referenceTo>
    <relationshipLabel>Scorecard Questions</relationshipLabel>
    <relationshipName>Scorecard_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>