force-app/main/default/objects/Scorecard_Questions__c/fields/Scorecard_Type__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Type__c</fullName>
    <formula>TEXT( Scorecard__r.Scorecard_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scorecard Type</label>
    <type>Text</type>
</CustomField>