force-app/main/default/objects/Scorecard_Questions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scorecard__c</columns>
    <columns>Title__c</columns>
    <columns>Point_Value__c</columns>
    <columns>Possible_Point_Value__c</columns>
    <columns>Subtractor_Value__c</columns>
    <columns>Scorecard_Type__c</columns>
    <columns>Active__c</columns>
    <columns>Restricted_Opportunity_Stages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>